# Brix

./: .env.example  .gitignore  CLAUDE.md  README.md  README_zh.md  main.py  package.json  pyproject.toml  tsconfig.json
capability/: __init__.py  base.py  runner.py
cli/: __init__.py  app.py  banner.py  completer.py  display.py  paginated_selector.py  spinner.py  stage_indicator.py  stream_renderer.py  theme.py  thinking_renderer.py  tool_display.py
config/: loader.py  model_registry.py  settings.yaml
dev_doc/: improvement_report.md  personal_agent_spec.md  typescript_migration_plan.md
hooks/: __init__.py  registry.py
infra/: llm_client.py
log/: __init__.py  flow.py  writer.py
memory/: __init__.py  provider.py  session.py  soul.py  storage.py  strategy.py  user.py
orchestrator/: engine.py  langgraph_engine.py  state_machine.py  states.py
router/: __init__.py  complexity.py  intent.py  model_router.py
src/: types.ts
tests/: anthropic-compat.test.ts  basics.test.ts  capability.test.ts  cli-entrypoint.test.ts  cli.test.ts  config.test.ts  conftest.py  file-tools.test.ts  global-command.test.ts  infra.test.ts  openai-compat.test.ts  orchestrator.test.ts  router.test.ts  test_bash.py  test_basics.py  test_builtin_commands.py  test_capability.py  test_cli.py  test_cli_integration.py  test_command_base.py  test_command_registry.py  test_completer.py  test_completer_registry.py  test_config.py  test_file_tools.py  test_flow_log.py  test_hooks.py  test_infra.py  test_langgraph.py  test_memory.py  test_memory_v2.py  test_orchestrator.py  test_router.py  (+9 more)
(+98 files in other folders)
